Changelog
---------

Because you have to know where your towel is.

1.0a3 (unreleased)
^^^^^^^^^^^^^^^^^^

- Nothing changed yet.


1.0a2 (2012-06-18)
^^^^^^^^^^^^^^^^^^

- Dependency package collective.prettydate no longer has a GS profile.
  [hvelarde]

- Indexes are now installed in an alternate way so catalog information is not
  lost on package reinstall (fixes `#33`_). [hvelarde]

- Spanish translation of News Codes was updated. [hvelarde]


1.0a1 (2012-05-21)
^^^^^^^^^^^^^^^^^^

- Initial release.

.. _`#33`: https://github.com/collective/collective.nitf/issues/33
