@@ -13,6 +13,8 @@ from plone.app.referenceablebehavior.referenceable import IReferenceable
 from plone.dexterity.interfaces import IDexterityFTI
 from plone.uuid.interfaces import IAttributeUUID
 
+from Products.CMFPlone.interfaces import INonStructuralFolder
+
 from collective.nitf.content import INITF
 from collective.nitf.testing import INTEGRATION_TESTING
 
@@ -53,6 +55,9 @@ class ContentTypeTestCase(unittest.TestCase):
     def test_is_referenceable(self):
         self.assertTrue(IReferenceable.providedBy(self.n1))
         self.assertTrue(IAttributeUUID.providedBy(self.n1))
+
+    def test_provides_inonstructural_interface(self):
+        self.assertTrue(INonStructuralFolder.providedBy(self.n1))
 
 
 class ActionsTestCase(unittest.TestCase):
