@@ -6,7 +6,8 @@ Because you have to know where your towel is.
 1.0a3 (unreleased)
 ^^^^^^^^^^^^^^^^^^
 
-- Nothing changed yet.
+- Make the NITF object to provide the INonStructuralFolder interface so
+  comments can be added to them [frapell]
 
 
 1.0a2 (2012-06-18)
